# advanced-alchemy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS1.md  CLAUDE.md  CNAME  CODEOWNERS  CONTRIBUTING.rst  GEMINI.md  LICENSE  Makefile  README.md  codecov.yml  conf.py  pyproject.toml  sonar-project.properties  sqlite.db  typos.toml
.claude/: AGENTS.md
.claude/agents/: docs-vision.md  expert.md  planner.md  testing.md
.claude/commands/: implement.md  review.md  test.md
.gemini/: GEMINI.md
.gemini/commands/: implement.toml  prd.toml  review.toml  sync-guides.toml  test.toml
.github/: CODEOWNERS  labeler.yml
.github/workflows/: cd.yml  ci.yaml  ci.yml  codeql.yml  docs-preview.yaml  docs-preview.yml  docs.yaml  docs.yml  pr-labeler.yml  pr-merged.yml  publish.yaml  publish.yml  test.yaml  test.yml
.zed/: settings.json
advanced_alchemy/: __init__.py  __main__.py  __metadata__.py  _listeners.py  _serialization.py  _typing.py  base.py  cli.py  exceptions.py  filters.py  operations.py  types.py  typing.py
advanced_alchemy/alembic/: commands.py  utils.py
advanced_alchemy/cache/: __init__.py  _null.py  config.py  manager.py  serializers.py
advanced_alchemy/cli/: __init__.py  builder.py
advanced_alchemy/config/: __init__.py  asyncio.py  common.py  engine.py  routing.py  serialization.py  sync.py  types.py
advanced_alchemy/extensions/: fastapi.py  sanic.py  starlette.py
advanced_alchemy/filters/: __init__.py  _base.py  _columns.py  _fields.py  _filterset.py  _logical.py  _pagination.py  _relationship.py  _search.py
advanced_alchemy/integrations/: fastapi.py  sanic.py  starlette.py
advanced_alchemy/mixins/: __init__.py  audit.py  bigint.py  nanoid.py  sentinel.py  slug.py  softdelete.py  unique.py  uuid.py
advanced_alchemy/repository/: __init__.py  _async.py  _load.py  _memory.py  _sync.py  _typing.py  _util.py  abc.py  typing.py
advanced_alchemy/routing/: __init__.py  context.py  maker.py  selectors.py  session.py
advanced_alchemy/service/: __init__.py  _async.py  _converters.py  _sync.py  _typing.py  _util.py  composition.py  pagination.py  typing.py
advanced_alchemy/types/: __init__.py  boolean.py  datetime.py  encrypted_string.py  file_object.py  guid.py  identity.py  json.py  mutables.py  totp.py  vector.py
advanced_alchemy/utils/: cli_tools.py  databases.py  dataclass.py  dependencies.py  deprecation.py  fixtures.py  module_loader.py  object_tools.py  portals.py  serialization.py  serializers.py  singleton.py  sync_tools.py  text.py  time.py
claude/: settings.local.json
claude/commands/: plan.md  review.md
docs/: PYPI_README.md  changelog.rst  conf.py  conftest.py  fix_missing_references.py  getting-started.rst  index.rst  releases.rst  try-it.rst
docs/_static/: copy_markdown.js  custom.css  litestar-sphinx-theme.css  syntax-highlighting.css  versioning.js  versions.json
docs/announcements/: adk-integration.rst
docs/guides/: README.md
docs/reference/: adk-compatibility-matrix.rst  base.rst  cache.rst  cli.rst  exceptions.rst  filters.rst  index.rst  operations.rst  repository.rst  routing.rst  service.rst  types.rst  utils.rst
docs/usage/: caching.rst  cli.rst  database_seeding.rst  index.rst  modeling.rst  models.rst  placeholder.rst  repositories.rst  routing.rst  services.rst  types.rst  utilities.rst
examples/: adk_models.py  fastapi.py  fastapi_filters.py  fastapi_service.py  filterset_basic.py  filterset_relationships.py  flask.py  flask_with_async_portal.py  litestar.py  multifilter_json.py  sanic.py  sanic_adk_example.py  standalone.py  standalone_json.py  us_state_lookup.json
examples/fastapi/: adk_example.py  fastapi_fileobject.py  fastapi_filters.py  fastapi_service.py  fastapi_service_full.py
examples/flask/: adk_example.py  flask_services.py
examples/litestar/: adk_example.py  litestar_fileobject.py  litestar_repo_only.py  litestar_service.py
examples/starlette/: __init__.py  adk_example.py
latest/: .buildinfo  changelog.html  contribution-guide.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  releases.html  search.html  searchindex.js
latest/_modules/: index.html  typing.html
latest/_sources/: getting-started.rst.txt  index.rst.txt
latest/_static/: documentation_options.js
latest/reference/: base.html  exceptions.html  filters.html  index.html  operations.html  repository.html  service.html  types.html  utils.html
latest/usage/: index.html  modeling.html  repositories.html  services.html  utilities.html
requirements/: README.md
specs/guides/: architecture.md  code-style.md  development-workflow.md  quality-gates.yaml  testing.md
sqla_repo/: __init__.py  types.py
sqla_repo/repository/: _async.py  _sync.py  _util.py  typing.py
tests/: conftest.py  docker-compose.overrides.yml  docker-compose.yml  docker_service_fixtures.py  helpers.py  models_bigint.py  models_uuid.py
tests/examples/: test_litestar.py
tests/extensions/: test_fastapi.py
tests/fixtures/: __init__.py  types.py
tests/integration/: _repository_tests.py  _service_tests.py  cleanup.py  conftest.py  helpers.py  repository_fixtures.py  test_alembic_cli_integration.py  test_alembic_commands.py  test_association_proxy.py  test_attrs_service.py  test_bigint_identity.py  test_cache_bind_group.py  test_cache_repository.py  test_database_commands.py  test_delete_expunge.py  test_encrypted_string.py  test_file_object.py  test_filters.py  test_filterset_e2e.py  test_inheritance.py  test_inheritance_patterns.py  test_lambda_stmt.py  test_litestar_cli_extension.py  test_litestar_session_backend.py  test_litestar_type_encoders.py  test_loader_and_execution_options.py  test_models.py  test_operations.py  test_oracledb_json.py  test_password_hash.py  test_relationship_filters.py  test_repository.py  test_routing.py  test_sqlquery_service.py  test_unique_mixin.py
tests/unit/: fixtures.py  test_20_deprecations.py  test_attrs_integration.py  test_base.py  test_base_inheritance.py  test_cattrs_integration.py  test_cli.py  test_docs.py  (+16 more)
tools/: build_docs.py  prepare_release.py  pypi_readme.py
(+460 files in other folders)
